# ICS-Builder

./: README.md  package-lock.json  package.json  sample.kdenlive
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lib.rs.tmp  main.rs
