[package]
name = "ics-builder"
version = "0.1.0"
description = "An App for building .ics files for calendar events. It can be imported into calendar apps like Google Calendar, Apple Calendar, etc."
authors = ["Shizuku"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ics_builder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = { path = "vendor/tauri-plugin-opener" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ics = "0.5.8"
chrono = "0.4.44"
chrono-tz = "0.10.4"
iana-time-zone = "0.1.64"
uuid = { version = "1.23.0", features = ["v4"] }
tauri-plugin-http = "2.5.8"
reqwest = { version = "0.13.2", features = ["json"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"

